Migrate to Java 14 and Eclipse 2020-06.